-
Bug
-
Resolution: Done
-
P1: Critical
-
5.4.1
-
None
-
Ubuntu 14.04 LTS 64-bit (xcb), VxWorks7
-
434868e9d3cab37b304d7511cd62616d7cd6e032
When using large font size (200) in Qt Quick 2 TextInput or Text element text for component is completely misplaced in screen (see attachment picture). NOTE: Qt needs to be configure+build without fontconfig support.
Commenting out following lines (from file src/gui/text/qfontengine_ft.cpp) in function QFontEngineFT::loadGlyphFor does fix the issue:
if (glyphSet != 0 && glyphSet->outline_drawing)
return 0;
Change c238d34137ffe80d30933733a12aa2893b9631c2 did introduce this problem.
- is required for
-
QTBUG-43201 Issues to be fixed before 5.4.1
-
- Closed
-
- relates to
-
QTBUG-44279 XCB: Completely bad font rendering when text changed in QML Text item using TTF font via FontLoader and some specific properties were provided
-
- Closed
-